--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
                     <div class="exp-percentage">12%</div>
                 </div>
             </div>
-            <div class="wallet-button">WALLET <br> <span>Coming Soon</span></div>
+            <div class="wallet-button">WALLET</div>
         </div>
     </div>
 
