--- a/game.html
+++ b/game.html
@@ -53,14 +53,14 @@
                 <div class="bar">
                     <div class="fill" id="energy-fill" style="width: 5%;"></div>
                 </div>
-                <div class="percentage" id="energy-percentage">5%</div>
+                <div class="percentage" id="energy-percentage">5.00%</div>
             </div>
             <div class="happiness-bar">
                 <img src="kalp.png" class="bar-icon">
                 <div class="bar">
                     <div class="fill" id="happiness-fill" style="width: 10%;"></div>
                 </div>
-                <div class="percentage" id="happiness-percentage">10%</div>
+                <div class="percentage" id="happiness-percentage">10.00%</div>
             </div>
         </div>
 
@@ -68,21 +68,23 @@
             <div class="inventory-items">
                 <button class="inventory-item" onclick="giveMama()">
                     <img src="mama.png" alt="Mama Icon">
-                    <span>Mama <span id="mama-count">3</span></span>
+                    <span>Mama</span>
+                    <div class="item-count" id="mama-count">3</div>
                 </button>
                 <button class="inventory-item" onclick="giveWater()">
                     <img src="su.png" alt="Su Icon">
-                    <span>Su <span id="water-count">1</span></span>
+                    <span>Su</span>
+                    <div class="item-count" id="water-count">1</div>
                 </button>
                 <button class="inventory-item" onclick="giveTop()">
                     <img src="top.png" alt="Top Icon">
                     <span>Top</span>
-                    <span id="top-timer">0:00</span>
+                    <div class="item-timer" id="top-timer">0:00</div>
                 </button>
                 <button class="inventory-item" onclick="giveBone()">
                     <img src="oy.png" alt="Oyuncak Kemik Icon">
                     <span>Oyuncak Kemik</span>
-                    <span id="bone-timer">0:00</span>
+                    <div class="item-timer" id="bone-timer">0:00</div>
                 </button>
             </div>
         </div>
