--- a/game.html
+++ b/game.html
@@ -11,12 +11,10 @@
     <div class="header">
         <div class="bottom-section">
             <div class="level-experience">
-                <div class="player-level">
-                    <img src="e.png" class="level-icon"> 1 <img src="e.png" class="level-icon">
-                </div>
+                <div class="player-level" id="level-name">PUPPY</div>
                 <div class="exp-bar">
-                    <div class="exp-fill" style="width: 12%;"></div>
-                    <div class="exp-percentage">12%</div>
+                    <div class="exp-fill" id="exp-fill" style="width: 0%;"></div>
+                    <div class="exp-percentage" id="exp-percentage">0%</div>
                 </div>
             </div>
             <div class="wallet-button">WALLET</div>
