--- a/game.html
+++ b/game.html
@@ -35,9 +35,9 @@
                 <img src="man.png" alt="Team Icon">
                 <span>TEAM</span>
             </button>
-            <button class="custom-button">
-                <img src="box.png" alt="Drop Icon">
-                <span>DROP</span>
+            <button class="custom-button" id="cydogs-button" onclick="toggleAutoBot()">
+                <img src="box.png" alt="CYDOGS Icon">
+                <span>CYDOGS</span>
             </button>
         </div>
 
