--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
                     <div class="exp-percentage" id="exp-percentage">0%</div>
                 </div>
             </div>
-            <div class="wallet-button">WALLET</div>
+            <div class="wallet-button soon-button">WALLET</div>
         </div>
     </div>
 
@@ -27,15 +27,15 @@
 
     <div class="main" id="main-screen">
         <div class="button-container">
-            <button class="custom-button">
-                <img src="sh.png" alt="Shelter Icon">
-                <span>SHELTER</span>
-            </button>
-            <button class="custom-button">
+            <button class="custom-button soon-button">
                 <img src="man.png" alt="Team Icon">
                 <span>TEAM</span>
             </button>
-            <button class="custom-button" id="cydogs-button" onclick="toggleAutoBot()">
+            <button class="custom-button disabled" id="shelter-button">
+                <img src="sh.png" alt="Shelter Icon">
+                <span>SHELTER</span>
+            </button>
+            <button class="custom-button disabled" id="cydogs-button" onclick="toggleAutoBot()">
                 <img src="box.png" alt="CYDOGS Icon">
                 <span>CYDOGS</span>
                 <div id="auto-bot-timer" class="auto-bot-timer">30:00</div>
@@ -67,22 +67,24 @@
             <div class="inventory-items">
                 <button class="inventory-item" onclick="giveMama()">
                     <img src="mama.png" alt="Mama Icon">
-                    <span>Mama</span>
+                    <span>Food</span>
                     <div class="item-count" id="mama-count">30</div>
                 </button>
                 <button class="inventory-item" onclick="giveWater()">
                     <img src="su.png" alt="Su Icon">
-                    <span>Su</span>
+                    <span>Water</span>
                     <div class="item-count" id="water-count">10</div>
                 </button>
                 <button class="inventory-item" onclick="giveTop()">
                     <img src="top.png" alt="Top Icon">
-                    <span>Top</span>
+                    <span>Ball</span>
+                    <div class="item-count" id="top-count">10</div>
                     <div class="item-timer" id="top-timer">0:00</div>
                 </button>
                 <button class="inventory-item" onclick="giveBone()">
                     <img src="oy.png" alt="Oyuncak Kemik Icon">
-                    <span>Oyuncak Kemik</span>
+                    <span>Bones</span>
+                    <div class="item-count" id="bone-count">5</div>
                     <div class="item-timer" id="bone-timer">0:00</div>
                 </button>
             </div>
@@ -98,54 +100,90 @@
             <div class="market-item" onclick="buyItem('mama', 50, 10)">
                 <img src="mama.png" alt="Mama">
                 <div class="item-details">
-                    <span>10 Mama</span>
+                    <span>10 Food</span>
                     <span>50 Doggar</span>
                 </div>
             </div>
             <div class="market-item" onclick="buyItem('mama', 250, 100)">
                 <img src="mama.png" alt="Mama">
                 <div class="item-details">
-                    <span>100 Mama</span>
+                    <span>100 Food</span>
                     <span>250 Doggar</span>
                 </div>
             </div>
             <div class="market-item" onclick="buyItem('su', 100, 10)">
                 <img src="su.png" alt="Su">
                 <div class="item-details">
-                    <span>10 Su</span>
+                    <span>10 Water</span>
                     <span>100 Doggar</span>
                 </div>
             </div>
             <div class="market-item" onclick="buyItem('su', 250, 50)">
                 <img src="su.png" alt="Su">
                 <div class="item-details">
-                    <span>50 Su</span>
+                    <span>50 Water</span>
                     <span>250 Doggar</span>
                 </div>
             </div>
-            <div class="market-item" onclick="buyItem('top', 10000, 1)">
+            <div class="market-item" onclick="buyItem('top', 10000, 10)">
                 <img src="top.png" alt="Top">
                 <div class="item-details">
-                    <span>1 Top</span>
+                    <span>10 Ball</span>
                     <span>10000 Doggar</span>
                 </div>
             </div>
-            <div class="market-item" onclick="buyItem('oyuncak', 50000, 1)">
+            <div class="market-item" onclick="buyItem('oyuncak', 50000, 5)">
                 <img src="oy.png" alt="Oyuncak Kemik">
                 <div class="item-details">
-                    <span>1 Oyuncak Kemik</span>
+                    <span>5 Bones</span>
                     <span>50000 Doggar</span>
+                </div>
+            </div>
+            <div class="market-item" id="shelter-item" onclick="buyItem('shelter', 5000000, 1)">
+                <img src="sh.png" alt="Shelter">
+                <div class="item-details">
+                    <span>Shelter</span>
+                    <span>5000000 Doggar</span>
+                </div>
+            </div>
+            <div class="market-item" id="cydogs-item" onclick="buyItem('cydogs', 100, 1)">
+                <img src="box.png" alt="CYDOGS">
+                <div class="item-details">
+                    <span>CYDOGS</span>
+                    <span>100 Doggar</span>
+                </div>
+            </div>
+            <div class="market-item" id="time-item" onclick="buyItem('time', 1000, 1)">
+                <img src="clock.png" alt="Time">
+                <div class="item-details">
+                    <span>TIME</span>
+                    <span>1000 Doggar</span>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="tasks hidden" id="tasks">
+        <div class="tasks-header">
+            <h2>Tasks</h2>
+            <button class="close-button" onclick="toggleTasks()">X</button>
+        </div>
+        <div class="tasks-tabs">
+            <button class="tab-button" id="daily-tasks-tab">Daily Tasks</button>
+            <button class="tab-button" id="new-tasks-tab">New Tasks</button>
+            <button class="tab-button" id="game-tasks-tab">Game Tasks</button>
+        </div>
+        <div class="tasks-content">
+            <!-- Görev içerikleri burada olacak -->
+        </div>
+    </div>
+
     <div class="navbar">
-        <div class="nav-button"><i class="fa fa-arrow-up"></i><br>UPGRADES</div>
-        <div class="nav-button" onclick="toggleMarket()"><i class="fa fa-shopping-cart"></i><br>MARKET</div>
-        <div class="nav-button"><i class="fa fa-home"></i><br>MAIN</div>
-        <div class="nav-button"><i class="fa fa-tasks"></i><br>TASKS</div>
-        <div class="nav-button"><i class="fa fa-users"></i><br>FRENS</div>
+        <div class="nav-button soon-button"><img src="cark.png" alt="Upgrades Icon"><span>UPGRADES</span></div>
+        <div class="nav-button" onclick="toggleMarket()"><img src="market.png" alt="Market Icon"><span>MARKET</span></div>
+        <div class="nav-button"><img src="home.png" alt="Home Icon"><span>MAIN</span></div>
+        <div class="nav-button" id="tasks-button"><img src="task.png" alt="Tasks Icon"><span>TASKS</span></div>
+        <div class="nav-button soon-button"><img src="friend.png" alt="Friends Icon"><span>FRENS</span></div>
     </div>
 
     <div class="alert-box hidden" id="alert-box"></div>
